# easy-ai-analytics

./: .replit  Home.py  app.py  database.py  fix_pages.py  pyproject.toml  requirements.txt  temp_ai_analytics.db
.streamlit/: config.toml
assets/: styles.css
attached_assets/: Pasted--Easy-AI-Analytics-Application-Report-1-Overview-Easy-AI-Analytics-is-a-powerful-business-intellige-1745964689185.txt  Pasted-1-AI-Powered-Analytics-Predictive-Forecasting-Implement-time-series-forecasting-using-machine-lear-1745878851638.txt  Pasted-SyntaxError-File-unknown-line-1-Units-Sold-SyntaxError-invalid-syntax-Traceback-File-hom-1745956584841.txt
pages/: AI_Analytics.py  Advanced_Formulas.py  Advanced_Statistics.py  Business_Features.py  Data_Enrichment.py  advanced_statistics.py  advanced_visualizations.py  ai_analytics.py  analyst_roles.py  business_features.py  data_enrichment.py  database_management.py
templates/: login.html
utils/: __init__.py  ai_analytics.py  data_processor.py  docx_generator.py  pdf_generator.py  visualizer.py
